plang/testing/logs/false-incorrect/49/program49.p.p
tun1 OO (WRZI4) XWSY :- (oe (h8) (iQriI (cb (DsfC) IdyV BHZFy (crp (OgDPY) b9shg (ggh d9E)))) (AXO) (dydO), eS zPN NQ, z4p, uG (vPWVz (TlAv) NAuW8 ycSEZ (N)) UEjXJ (wTuTT ImpOq MC2M Nl9g) L0, ((mv (Q71SU), wgfq6 o3bBQ eo))).


j :- ((pQ Hjmq (YHx) LeVj LV, x4Hn5 (olS (Exh) hhkf) g5gbz sW8tw Bh); (slmHp MWCkK FdD)); (bv1 ZnON7 (F); hCTkf (M5Kd) (cE8E b (B1f)) (jBCCG mt (AF) l); iyKZh UV N xx, mIngU); utWtF EdfF, ltE0k (eSx6) (XCWg) (MlKI) Zg8; d, xZgh (qgODM (vmxvB (bmTo GL) Kc y) (Y)) (ANg); gL (ZX5L7) pTj, gYU (f AK) GC k, f78c cff.

onbmh :- (tjIf Mr0E Y; dW9 (F) (J) DU (n xX (Bq5) (J)), msHV (Y); (dGjCS (NdE) b (c (iPHq f (vz0jQ (j (AfFy) (tBX Bt KBRob AV) (WwR0))) (prB0 (olj (o4OY iG7 C a)) (U4) (fga1s) s) G) M04D (P) Gjzd)), pZFJ e, hu (dlCx (DCMoh)) QwdL gbV; s75 FW1yr H6v (E) (I)).
hTh.

es M (SC23I) AeD.


du :- bJv (fZ4x), ((lcu ej4K), fMh7 (z7b4 Vb (rwgF T u WFcuA Is)) wG9 (ni4 xz JRmzd GL o0D) (hEC), fc).
eOf9u LYpX (wT (r) SGbAl j9) (pW qWeBg) (KDX) :- k vdMQ (UwHE) na.

b :- zP (ml (dfywE (BZ) j YDvf)) Y (l m11g (F)); bF v1P Ln0 (rikm uD0 (uTYf i7 NX4)) j6, y M DimN2 DvA5; osylm Mir1u jtDKF (TiPBA) (B), vWU (tkfq (kRrFE l) bKrtZ) (XcJ) Xm, t uuC, lJ9sI Ix7 (wg (woG2V (aZ FZNG (d4LVA (uTAT (L) Ky (DkFF)) (p wE) (OuIhq) (bjeF8 (jLv (ZnB) R (AcI)) njn rO)) KAAUl) FbmOA dAwRR (s ydS (dr (JsJ6) tCiWM (pC f vP8ti) UeKUf) SHyCU))) TRwDb JOlT, y Sz4z; cR72 Xbj9a (NPb) (F6) TUPli; (notPq O, zvK (yArfY)), (trc4; w6Ds (S) (dIQIM (Enzx) HGQ D8jLX) (TSS8)); (pl (xpM) TLWd (Rm) (g2)), f2LZG; (v (Gjx) (FmcY) d CJ), (rG (baw hk VAQey b) rkfW6 E2yy (o Bab8e (bLawZ klA2 (hmKV (dmK) (vFE (Laq)) (CgyV) i) (v r E22Wk) tod) HqA3)).


o (Y) (q (n1 (TE3fl) iW T)) (c7 (pJ (bEx yaY) (N7Y) (vUKV (Fak) (D4FdU) (kF5 (icO)) Gj))) b.
? bY (HE6z) NoC V (b3), wX8D9 h.


